// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Elements/SmallModal With Dangerous Content 1`] = `
<div
  className="max-w-md px-4 md:px-0"
>
  <div
    className="bg-white shadow-lg p-8 flex flex-col gap-8 place-content-between"
    style={
      Object {
        "minHeight": 360,
      }
    }
  >
    <div>
      <h1
        className="text-3xl font-semibold m-0 mb-4 text-red-500"
      >
        Bitte bestätige die Löschung deines Accounts
      </h1>
      <p>
        Dein Account wird undwiederruflich gelöscht. Alle deine Projekte und Daten werden von der Platform und aus der Datenbank entfernt.
      </p>
    </div>
    <div
      className="flex gap-4 place-content-between"
    >
      <div
        className="block w-full text-right"
      >
        <button
          className="text-lg px-4 py-2 font-sans transition cursor-pointer focus-offset focus:ring-red-500 bg-white border border-red-500 text-red-500 hover:bg-red-500 hover:bg-opacity-10 mr-4"
          type="button"
          variant="dangerous"
        >
          Löschen
        </button>
        <button
          className="text-lg px-4 py-2 font-sans transition cursor-pointer focus-offset focus:ring-blue-500 bg-blue-500 text-white hover:opacity-60"
          type="button"
          variant="primary"
        >
          Abbrechen
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots UI Elements/SmallModal With Footer Content 1`] = `
<div
  className="max-w-md px-4 md:px-0"
>
  <div
    className="bg-white shadow-lg p-8 flex flex-col gap-8 place-content-between"
    style={
      Object {
        "minHeight": 360,
      }
    }
  >
    <div>
      <h1
        className="text-3xl font-semibold m-0 mb-4 text-blue-500"
      >
        Willkommen!
      </h1>
      <div>
        Du bist eingeloggt als:
        <div
          className="mt-1"
        >
          <span
            className="mr-1.5 inline-block align-middle rounded-full border border-blue-50"
            style={
              Object {
                "height": 25,
                "width": 25,
              }
            }
          >
            <svg
              colors={
                Array [
                  "#E40134",
                  "#213A8F",
                  "#3192D0",
                  "#63B9E9",
                  "#FFFFFF",
                ]
              }
              fill="none"
              height={24}
              name="User"
              size={24}
              viewBox="0 0 80 80"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <mask
                height={80}
                id="mask0"
                mask-type="alpha"
                maskUnits="userSpaceOnUse"
                width={80}
                x={0}
                y={0}
              >
                <circle
                  cx={40}
                  cy={40}
                  fill="white"
                  r={40}
                />
              </mask>
              <g
                mask="url(#mask0)"
              >
                <rect
                  fill="#3192D0"
                  height={10}
                  width={10}
                />
                <rect
                  fill="#FFFFFF"
                  height={10}
                  width={10}
                  x={20}
                />
                <rect
                  fill="#E40134"
                  height={10}
                  width={10}
                  x={40}
                />
                <rect
                  fill="#E40134"
                  height={10}
                  width={10}
                  x={60}
                />
                <rect
                  fill="#3192D0"
                  height={10}
                  width={10}
                  x={10}
                />
                <rect
                  fill="#213A8F"
                  height={10}
                  width={10}
                  x={30}
                />
                <rect
                  fill="#213A8F"
                  height={10}
                  width={10}
                  x={50}
                />
                <rect
                  fill="#E40134"
                  height={10}
                  width={10}
                  x={70}
                />
                <rect
                  fill="#213A8F"
                  height={10}
                  width={10}
                  y={10}
                />
                <rect
                  fill="#FFFFFF"
                  height={10}
                  width={10}
                  y={20}
                />
                <rect
                  fill="#213A8F"
                  height={10}
                  width={10}
                  y={30}
                />
                <rect
                  fill="#3192D0"
                  height={10}
                  width={10}
                  y={40}
                />
                <rect
                  fill="#E40134"
                  height={10}
                  width={10}
                  y={50}
                />
                <rect
                  fill="#E40134"
                  height={10}
                  width={10}
                  y={60}
                />
                <rect
                  fill="#E40134"
                  height={10}
                  width={10}
                  y={70}
                />
                <rect
                  fill="#63B9E9"
                  height={10}
                  width={10}
                  x={20}
                  y={10}
                />
                <rect
                  fill="#FFFFFF"
                  height={10}
                  width={10}
                  x={20}
                  y={20}
                />
                <rect
                  fill="#E40134"
                  height={10}
                  width={10}
                  x={20}
                  y={30}
                />
                <rect
                  fill="#3192D0"
                  height={10}
                  width={10}
                  x={20}
                  y={40}
                />
                <rect
                  fill="#213A8F"
                  height={10}
                  width={10}
                  x={20}
                  y={50}
                />
                <rect
                  fill="#FFFFFF"
                  height={10}
                  width={10}
                  x={20}
                  y={60}
                />
                <rect
                  fill="#3192D0"
                  height={10}
                  width={10}
                  x={20}
                  y={70}
                />
                <rect
                  fill="#E40134"
                  height={10}
                  width={10}
                  x={40}
                  y={10}
                />
                <rect
                  fill="#FFFFFF"
                  height={10}
                  width={10}
                  x={40}
                  y={20}
                />
                <rect
                  fill="#63B9E9"
                  height={10}
                  width={10}
                  x={40}
                  y={30}
                />
                <rect
                  fill="#E40134"
                  height={10}
                  width={10}
                  x={40}
                  y={40}
                />
                <rect
                  fill="#E40134"
                  height={10}
                  width={10}
                  x={40}
                  y={50}
                />
                <rect
                  fill="#E40134"
                  height={10}
                  width={10}
                  x={40}
                  y={60}
                />
                <rect
                  fill="#E40134"
                  height={10}
                  width={10}
                  x={40}
                  y={70}
                />
                <rect
                  fill="#3192D0"
                  height={10}
                  width={10}
                  x={60}
                  y={10}
                />
                <rect
                  fill="#63B9E9"
                  height={10}
                  width={10}
                  x={60}
                  y={20}
                />
                <rect
                  fill="#FFFFFF"
                  height={10}
                  width={10}
                  x={60}
                  y={30}
                />
                <rect
                  fill="#E40134"
                  height={10}
                  width={10}
                  x={60}
                  y={40}
                />
                <rect
                  fill="#213A8F"
                  height={10}
                  width={10}
                  x={60}
                  y={50}
                />
                <rect
                  fill="#FFFFFF"
                  height={10}
                  width={10}
                  x={60}
                  y={60}
                />
                <rect
                  fill="#213A8F"
                  height={10}
                  width={10}
                  x={60}
                  y={70}
                />
                <rect
                  fill="#63B9E9"
                  height={10}
                  width={10}
                  x={10}
                  y={10}
                />
                <rect
                  fill="#E40134"
                  height={10}
                  width={10}
                  x={10}
                  y={20}
                />
                <rect
                  fill="#3192D0"
                  height={10}
                  width={10}
                  x={10}
                  y={30}
                />
                <rect
                  fill="#213A8F"
                  height={10}
                  width={10}
                  x={10}
                  y={40}
                />
                <rect
                  fill="#FFFFFF"
                  height={10}
                  width={10}
                  x={10}
                  y={50}
                />
                <rect
                  fill="#3192D0"
                  height={10}
                  width={10}
                  x={10}
                  y={60}
                />
                <rect
                  fill="#E40134"
                  height={10}
                  width={10}
                  x={10}
                  y={70}
                />
                <rect
                  fill="#63B9E9"
                  height={10}
                  width={10}
                  x={30}
                  y={10}
                />
                <rect
                  fill="#213A8F"
                  height={10}
                  width={10}
                  x={30}
                  y={20}
                />
                <rect
                  fill="#FFFFFF"
                  height={10}
                  width={10}
                  x={30}
                  y={30}
                />
                <rect
                  fill="#3192D0"
                  height={10}
                  width={10}
                  x={30}
                  y={40}
                />
                <rect
                  fill="#E40134"
                  height={10}
                  width={10}
                  x={30}
                  y={50}
                />
                <rect
                  fill="#FFFFFF"
                  height={10}
                  width={10}
                  x={30}
                  y={60}
                />
                <rect
                  fill="#63B9E9"
                  height={10}
                  width={10}
                  x={30}
                  y={70}
                />
                <rect
                  fill="#3192D0"
                  height={10}
                  width={10}
                  x={50}
                  y={10}
                />
                <rect
                  fill="#213A8F"
                  height={10}
                  width={10}
                  x={50}
                  y={20}
                />
                <rect
                  fill="#E40134"
                  height={10}
                  width={10}
                  x={50}
                  y={30}
                />
                <rect
                  fill="#FFFFFF"
                  height={10}
                  width={10}
                  x={50}
                  y={40}
                />
                <rect
                  fill="#63B9E9"
                  height={10}
                  width={10}
                  x={50}
                  y={50}
                />
                <rect
                  fill="#3192D0"
                  height={10}
                  width={10}
                  x={50}
                  y={60}
                />
                <rect
                  fill="#213A8F"
                  height={10}
                  width={10}
                  x={50}
                  y={70}
                />
                <rect
                  fill="#E40134"
                  height={10}
                  width={10}
                  x={70}
                  y={10}
                />
                <rect
                  fill="#E40134"
                  height={10}
                  width={10}
                  x={70}
                  y={20}
                />
                <rect
                  fill="#E40134"
                  height={10}
                  width={10}
                  x={70}
                  y={30}
                />
                <rect
                  fill="#E40134"
                  height={10}
                  width={10}
                  x={70}
                  y={40}
                />
                <rect
                  fill="#E40134"
                  height={10}
                  width={10}
                  x={70}
                  y={50}
                />
                <rect
                  fill="#E40134"
                  height={10}
                  width={10}
                  x={70}
                  y={60}
                />
                <rect
                  fill="#E40134"
                  height={10}
                  width={10}
                  x={70}
                  y={70}
                />
              </g>
            </svg>
          </span>
          <span
            className="text-gray-400"
          >
            user@usermail.com
          </span>
        </div>
      </div>
    </div>
    <div
      className="flex gap-4 place-content-between"
    >
      <div
        className="block w-full text-right"
      >
        <button
          className="text-lg px-4 py-2 font-sans transition cursor-pointer focus-offset focus:ring-blue-500 bg-blue-500 text-white hover:opacity-60"
          type="button"
          variant="primary"
        >
          Dein Profil
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots UI Elements/SmallModal Without Footer Content 1`] = `
<div
  className="max-w-md px-4 md:px-0"
>
  <div
    className="bg-white shadow-lg p-8 flex flex-col gap-8 place-content-between"
    style={
      Object {
        "minHeight": 360,
      }
    }
  >
    <div>
      <h1
        className="text-3xl font-semibold m-0 mb-4 text-blue-500"
      >
        Gehe zu deinen E-Mails
      </h1>
      <p>
        Wir haben dir eine E-Mail mit einem Anmeldungs-Link geschickt. Klicke den Link an, um dich einzuloggen.
      </p>
    </div>
  </div>
</div>
`;
